--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,6 +4,7 @@ header {
   width: 100%;
   background: white;
   position: fixed;
+  top: 0;
   z-index: 2;
 
   .toggle {
@@ -24,58 +25,6 @@ header {
     }
   }
 
-  // .active {
-  //   display: none;
-  //   position: absolute;
-  //   top: 25px;
-  //   left: 15px;
-  //
-  //   span {
-  //     display: block;
-  //     background: white;
-  //     width: 40px;
-  //     height: 7px;
-  //     position: relative;
-  //     z-index: 2;
-  //   }
-  //
-  //   span:nth-child(1) {
-  //     -webkit-transform: rotate(45deg);
-  //     -moz-transform: rotate(45deg);
-  //     -o-transform: rotate(45deg);
-  //     transform: rotate(45deg);
-  //   }
-  //
-  //   span:nth-child(2) {
-  //     -webkit-transform: rotate(-45deg);
-  //     -moz-transform: rotate(-45deg);
-  //     -o-transform: rotate(-45deg);
-  //     transform: rotate(-45deg);
-  //     top: -7px;
-  //   }
-  // }
-
-  // .mobile {
-  //   background: rgba(112, 126, 139, 0.83);
-  //   position: absolute;
-  //   z-index: 1;
-  //
-  //   .toggle {
-  //     display: none;
-  //     padding: 5rem 15px 0 0;
-  //     height: 100vh;
-  //
-  //     li {
-  //       a {
-  //         color: white;
-  //         font-size: 1.7rem;
-  //         font-weight: 900;
-  //         letter-spacing: 1px;
-  //       }
-  //     }
-  //   }
-  // }
-  //
   img {
     position: relative;
     z-index: 2;
