--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -16,12 +16,12 @@ $font-color: #828181;
 
 //fonts
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900|Satisfy');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,500i,700,900|Satisfy');
 
 $paragraph-font-size: 0.9rem;
 $header-font-size: 3rem;
-$primary-font-size: 2rem;
-$secondary-font-size: 1.4rem;
+$primary-font-size: 2.2rem;
+$secondary-font-size: 1.25rem;
 
 $sans: 'Montserrat';
 $cursive: 'Satisfy';
@@ -30,6 +30,21 @@ $cursive: 'Satisfy';
   text-shadow: 5px 5px 4px rgba(112, 126, 139, 0.3);
   font-weight: 900;
   font-size: $header-font-size;
+}
+
+@mixin subpage-header {
+  position: absolute;
+  top: -7rem;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+@mixin sub-subhead-header {
+  font-weight: 700;
+  border-bottom: 3px solid $font-color;
+  width: 90px;
+  padding-bottom: 3px;
 }
 
 h1,
