--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -10,13 +10,14 @@
 //colors
 
 $font-color: #5a5858;
+$red: #ed512c;
 
 //fonts
 
 @import url('https://fonts.googleapis.com/css?family=Arsenal:400,700i|Rock+Salt|Taviraj:300,300i,400');
 @import url('https://fonts.googleapis.com/css?family=Arsenal:700');
 
-$paragraph-font-size: 0.9rem;
+$paragraph-font-size: 1.3rem;
 $header-font-size: 3rem;
 $primary-font-size: 2.2rem;
 $secondary-font-size: 1.25rem;
@@ -51,4 +52,13 @@ p {
   line-height: 1.5;
   font-family: $sans;
   font-weight: 400;
+}
+
+@mixin headertext {
+  color: white;
+  text-align: center;
+  font-size: 2.9rem;
+  line-height: 1;
+  position: relative;
+  z-index: 2;
 }
