--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,7 @@
 @import "nav.scss";
 @import "header.scss";
 @import "intro.scss";
+@import "menu.scss";
+@import "contact.scss";
+@import "instagram.scss";
+@import "footer.scss";
