--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -17,6 +17,7 @@
     border-radius: 5px;
     display: inline-flex;
     align-items: center;
+    z-index: 5;
 
     .nav-logo img {
       width: 100px;
@@ -50,6 +51,51 @@
           font-size: 20px;
           padding-left: 7px;
         }
+      }
+    }
+  }
+}
+
+.location-nav {
+  background: $darkyellow;
+
+  ul {
+    width: 100%;
+    display: inline-flex;
+    padding: 10px 0;
+    padding-left: 0;
+
+    li {
+      width: 50%;
+      text-align: center;
+
+      a {
+        font-size: 2rem;
+        letter-spacing: 5px;
+        font-family: $sans;
+        color: $font-color;
+        font-weight: 700;
+      }
+    }
+  }
+}
+
+.menu-subnav {
+  text-align: center;
+
+  ul {
+    width: 70%;
+    display: inline-flex;
+    justify-content: center;
+    padding-left: 0;
+    margin: 70px 0;
+
+    li {
+      width: 30%;
+
+      a {
+        font-size: 1.7rem;
+        font-family: $handwritten;
       }
     }
   }
