--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -39,6 +39,7 @@
         .foot-nav {
           font-size: 1.1rem;
           margin-right: 5px;
+          line-height: 1;
         }
       }
     }
