--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -1,6 +1,6 @@
 .row {
   max-width: 900px;
-  margin: 70px auto;
+  margin: 100px auto;
 
   h1 {
     color: $red;
@@ -11,5 +11,6 @@
     max-width: 600px;
     margin-top: 30px;
     margin-left: 220px;
+    font-size: 1.7rem;
   }
 }
