--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,3 +1,13 @@
+.contact-img.header-img {
+  background-position-x: -100px;
+  width: 110%;
+
+  img {
+    width: 50%;
+    right: 100px;
+  }
+}
+
 .contact-container {
   justify-content: space-evenly;
   margin-top: 70px;
@@ -17,7 +27,13 @@
 
       .map {
         margin-bottom: 15px;
+        overflow: hidden;
+        max-height: 300px;
       }
+    }
+
+    .item:nth-child(2) {
+      min-height: 100px;
     }
   }
 }
