--- a/src/scss/instagram.scss
+++ b/src/scss/instagram.scss
@@ -6,6 +6,14 @@
   h1 {
     color: #aac783;
     text-align: center;
-    margin-top: 70px;
+    margin-top: 150px;
+  }
+
+  .lightwidget-widget {
+    display: block;
+    width: 90%;
+    margin: 70px auto;
+    border: none;
+    padding-left: 1%;
   }
 }
