--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -20,6 +20,7 @@
   display: flex;
   justify-content: space-between;
   margin: 15px 50px;
+  padding-bottom: 50px;
 
   .foot {
     width: calc(50% - 80px);
