finished instagram feed, working on menu

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,10 +1,9 @@
 .contact-img.header-img {
   background-position-x: -100px;
-  width: 110%;
 
   img {
-    width: 50%;
-    right: 100px;
+    width: 52%;
+    right: 0;
   }
 }
 
