--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -120,5 +120,11 @@
         font-family: $handwritten;
       }
     }
+
+    .selected {
+      a {
+        color: yellow;
+      }
+    }
   }
 }
