fixed wahiawa/keeamoku toggle

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -73,14 +73,14 @@
         font-size: 2rem;
         letter-spacing: 5px;
         font-family: $sans;
-        color: white;
+        color: #f3df9d;
         font-weight: 700;
         display: inline-flex;
 
         .arrows {
           display: block;
           font-size: 2rem;
-          color: white;
+          color: #f3df9d;
           letter-spacing: -5px;
           margin: 0 7px;
         }
@@ -123,7 +123,15 @@
 
     .selected {
       a {
-        color: yellow;
+        color: $darkyellow;
+        border-bottom: 1px solid $darkyellow;
+      }
+    }
+
+    .wahiawamenu.selected {
+      a {
+        color: $red;
+        border-bottom: 1px solid $red;
       }
     }
   }
