--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -10,7 +10,8 @@
   p {
     max-width: 600px;
     margin-top: 30px;
-    margin-left: 220px;
+    margin-left: 210px;
+    margin-right: 100px;
     font-size: 1.7rem;
   }
 }
