--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -21,11 +21,23 @@
   background-position: right;
 }
 
+// #menudrinks {
+//   position: relative;
+//
+//   .sampler-bg {
+//     position: absolute;
+//     bottom: 5%;
+//     background: yellow;
+//     width: 34%;
+//     height: 70%;
+//   }
+// }
+
 .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 50px;
+  margin: 150px 100px;
   margin-top: 0;
   position: relative;
 
@@ -54,6 +66,7 @@
   .hb-back,
   .f-back {
     width: 100%;
+    bottom: -50px;
   }
 
   .col.food-item {
@@ -87,7 +100,7 @@
   position: relative;
   left: 0;
   right: 0;
-  bottom: 70px;
+  bottom: 100px;
 
   .back {
     border: 0.25px solid $font-color;
@@ -98,6 +111,21 @@
   }
 }
 
-// .hide {
-//   display: none;
-// }
+.sidebar {
+  .house-dressings {
+    line-height: 1.3;
+    margin-bottom: 15px;
+  }
+
+  .house {
+    ul {
+      display: flex;
+      justify-content: flex-start;
+
+      li {
+        margin-right: 25px;
+        font-style: italic;
+      }
+    }
+  }
+}
