--- a/src/scss/instagram.scss
+++ b/src/scss/instagram.scss
@@ -9,11 +9,14 @@
     margin-top: 150px;
   }
 
-  .lightwidget-widget {
+  .ig-desktop {
     display: block;
     width: 90%;
     margin: 70px auto;
     border: none;
-    padding-left: 1%;
+  }
+
+  .ig-mobile {
+    display: none;
   }
 }
