--- a/src/scss/intro.scss
+++ b/src/scss/intro.scss
@@ -4,14 +4,14 @@
 
   h1 {
     color: $red;
-    margin-left: 100px;
+    margin-left: 10%;
   }
 
   p {
     max-width: 600px;
     margin-top: 30px;
-    margin-left: 210px;
-    margin-right: 100px;
+    margin-left: 23%;
+    margin-right: 10%;
     font-size: 1.7rem;
   }
 }
