--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -178,3 +178,107 @@
     }
   }
 }
+
+@media screen and (max-width: 500px) {
+  .container {
+    margin: 70px 30px;
+  }
+
+  .row {
+    margin: 50px auto;
+  }
+
+  .home-intro {
+    h1 {
+      line-height: 1.3;
+    }
+  }
+
+  .hiblend-header-text {
+    padding-right: 0 !important;
+
+    .header-text-one {
+      padding-left: 0;
+      font-size: 2.2rem !important;
+    }
+
+    .header-text-mid {
+      padding-right: 100px;
+      font-size: 2.2rem !important;
+
+      span {
+        font-size: 3.5rem;
+        top: -10px;
+      }
+    }
+
+    .header-text-two {
+      padding-left: 30px !important;
+      font-size: 2.2rem !important;
+    }
+  }
+
+  .header-img {
+    height: 178px;
+    background-size: 150%;
+    background-position: bottom center;
+  }
+
+  .menu-img,
+  .contact-img {
+    img {
+      top: 70px;
+      width: 50%;
+    }
+  }
+
+  .drinkscol,
+  .food-item,
+  .wraps {
+    margin-bottom: 50px;
+  }
+
+  .back-button {
+    bottom: 50px;
+  }
+
+  .contact-img.header-img {
+    background-position: center;
+
+    img {
+      width: 60%;
+    }
+  }
+
+  .contact-container {
+    margin: 50px 30px;
+
+    .contact-col {
+      margin-bottom: 50px;
+    }
+
+    .contact-col:last-of-type {
+      margin-bottom: 20px;
+    }
+  }
+
+  .keeaumoku,
+  .wahiawa {
+    a {
+      font-size: 1.15rem !important;
+
+      .arrows {
+        font-size: 1.7rem !important;
+        margin: 0 3px !important;
+      }
+    }
+  }
+
+  .menu-subnav {
+    ul {
+      display: flex;
+      flex-flow: column;
+      margin: 50px 0;
+    }
+  }
+}
