--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -63,7 +63,7 @@
     height: 300px;
 
     img {
-      width: 70%;
+      width: 50%;
       opacity: 1;
     }
   }
@@ -117,7 +117,7 @@
 
   .contact-img.header-img {
     img {
-      width: 80%;
+      width: 60%;
     }
   }
 
@@ -180,6 +180,14 @@
 }
 
 @media screen and (max-width: 500px) {
+  .main-nav {
+    display: none !important;
+  }
+
+  .mobile {
+    display: block !important;
+  }
+
   .container {
     margin: 70px 30px;
   }
@@ -191,30 +199,37 @@
   .home-intro {
     h1 {
       line-height: 1.3;
+      width: 80%;
     }
   }
 
-  .hiblend-header-text {
-    padding-right: 0 !important;
+  .hiblend-header-img {
+    height: 225px;
+    background-size: 200%;
 
-    .header-text-one {
-      padding-left: 0;
-      font-size: 2.2rem !important;
-    }
+    .hiblend-header-text {
+      padding-right: 0 !important;
+      padding-top: 100px;
 
-    .header-text-mid {
-      padding-right: 100px;
-      font-size: 2.2rem !important;
-
-      span {
-        font-size: 3.5rem;
-        top: -10px;
+      .header-text-one {
+        padding-left: 0;
+        font-size: 2.2rem !important;
       }
-    }
 
-    .header-text-two {
-      padding-left: 30px !important;
-      font-size: 2.2rem !important;
+      .header-text-mid {
+        padding-right: 100px;
+        font-size: 2.2rem !important;
+
+        span {
+          font-size: 3.5rem;
+          top: -10px;
+        }
+      }
+
+      .header-text-two {
+        padding-left: 30px !important;
+        font-size: 2.2rem !important;
+      }
     }
   }
 
