--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -60,7 +60,6 @@
     display: none;
     background: transparent;
     width: 60%;
-    height: 100vh;
     left: 0;
     right: auto;
     top: 0;
@@ -104,6 +103,7 @@
 
   .mobile.open {
     background: rgba(0, 0, 0, 0.66);
+    height: 100vh;
 
     ul {
       display: block;
@@ -172,14 +172,14 @@
         font-size: 2rem;
         letter-spacing: 5px;
         font-family: $sans;
-        color: #f3df9d;
+        color: #f7edce;
         font-weight: 700;
         display: inline-flex;
 
         .arrows {
           display: block;
           font-size: 2rem;
-          color: #f3df9d;
+          color: #f7edce;
           letter-spacing: -5px;
           margin: 0 7px;
         }
