--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -144,22 +144,22 @@
       line-height: 1.3;
     }
 
-    iframe.ig-desktop {
-      display: none;
-    }
-
-    .ig-mobile-wrapper {
-      width: 80%;
-      margin: 0 auto;
-      margin-bottom: 70px;
-
-      iframe.lightwidget-widget.ig-mobile {
-        display: block;
-        width: 90%;
-        overflow: hidden;
-        border: none;
-      }
-    }
+    // iframe.ig-desktop {
+    //   display: none;
+    // }
+    //
+    // .ig-mobile-wrapper {
+    //   width: 80%;
+    //   margin: 0 auto;
+    //   margin-bottom: 70px;
+    //
+    //   iframe.lightwidget-widget.ig-mobile {
+    //     display: block;
+    //     width: 90%;
+    //     overflow: hidden;
+    //     border: none;
+    //   }
+    // }
   }
 
   .footer {
