--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -144,21 +144,14 @@
       line-height: 1.3;
     }
 
-    iframe.hiblend-ig {
-      width: 90%;
-    }
+    .ig-wrapper {
+      width: 70%;
+      margin: 70px auto;
+      text-align: center;
 
-    .ig-mobile-wrapper {
-      width: 80%;
-      margin: 0 auto;
-      margin-bottom: 70px;
-
-      iframe.lightwidget-widget.ig-mobile {
-        display: block;
-        width: 90%;
-        overflow: hidden;
-        border: none;
-      }
+      // iframe[style] {
+      //   height: 600px !important;
+      // }
     }
   }
 
