--- a/src/scss/media_queries.scss
+++ b/src/scss/media_queries.scss
@@ -39,15 +39,27 @@
     height: 350px;
 
     .hiblend-header-text {
-      padding-top: 150px;
+      padding-top: 100px;
       padding-right: 20%;
 
       h2 {
         font-size: 2.5rem;
       }
 
+      img {
+        left: 46%;
+      }
+
+      .header-text-one {
+        padding-left: 150px;
+      }
+
+      .header-text-mid {
+        padding-left: 30px;
+      }
+
       .header-text-two {
-        padding-left: 130px;
+        padding-left: 150px;
       }
     }
   }
@@ -199,19 +211,27 @@
   .hiblend-header-img {
     height: 225px;
     background-size: 200%;
+    background-position: top, center;
 
     .hiblend-header-text {
       padding-right: 0 !important;
-      padding-top: 100px;
+      padding-top: 35px;
+
+      img {
+        width: 130px;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0);
+      }
 
       .header-text-one {
         padding-left: 0;
-        font-size: 2.2rem !important;
+        font-size: 2rem !important;
       }
 
       .header-text-mid {
         padding-right: 100px;
-        font-size: 2.2rem !important;
+        font-size: 2rem !important;
 
         span {
           font-size: 3.5rem;
@@ -221,7 +241,7 @@
 
       .header-text-two {
         padding-left: 30px !important;
-        font-size: 2.2rem !important;
+        font-size: 2rem !important;
       }
     }
   }
