--- a/style.css
+++ b/style.css
@@ -326,8 +326,9 @@ p {
       border-bottom: 1px solid #ed512c; }
 
 .hiblend-header-text {
-  padding-top: 200px;
-  padding-right: 10%; }
+  padding-top: 150px;
+  padding-right: 10%;
+  position: relative; }
   .hiblend-header-text h2 {
     color: white;
     text-align: center;
@@ -335,6 +336,10 @@ p {
     line-height: 1;
     position: relative;
     z-index: 2; }
+  .hiblend-header-text img {
+    width: 200px;
+    position: relative;
+    left: 48%; }
   .hiblend-header-text .header-text-one {
     padding-left: 130px; }
   .hiblend-header-text .header-text-two {
@@ -532,12 +537,18 @@ p {
   .hiblend-header-img {
     height: 350px; }
     .hiblend-header-img .hiblend-header-text {
-      padding-top: 150px;
+      padding-top: 100px;
       padding-right: 20%; }
       .hiblend-header-img .hiblend-header-text h2 {
         font-size: 2.5rem; }
+      .hiblend-header-img .hiblend-header-text img {
+        left: 46%; }
+      .hiblend-header-img .hiblend-header-text .header-text-one {
+        padding-left: 150px; }
+      .hiblend-header-img .hiblend-header-text .header-text-mid {
+        padding-left: 30px; }
       .hiblend-header-img .hiblend-header-text .header-text-two {
-        padding-left: 130px; }
+        padding-left: 150px; }
   .home-intro p {
     font-size: 1.4rem;
     margin-left: 15%; }
@@ -612,22 +623,28 @@ p {
     width: 80%; }
   .hiblend-header-img {
     height: 225px;
-    background-size: 200%; }
+    background-size: 200%;
+    background-position: top, center; }
     .hiblend-header-img .hiblend-header-text {
       padding-right: 0 !important;
-      padding-top: 100px; }
+      padding-top: 35px; }
+      .hiblend-header-img .hiblend-header-text img {
+        width: 130px;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0); }
       .hiblend-header-img .hiblend-header-text .header-text-one {
         padding-left: 0;
-        font-size: 2.2rem !important; }
+        font-size: 2rem !important; }
       .hiblend-header-img .hiblend-header-text .header-text-mid {
         padding-right: 100px;
-        font-size: 2.2rem !important; }
+        font-size: 2rem !important; }
         .hiblend-header-img .hiblend-header-text .header-text-mid span {
           font-size: 3.5rem;
           top: -10px; }
       .hiblend-header-img .hiblend-header-text .header-text-two {
         padding-left: 30px !important;
-        font-size: 2.2rem !important; }
+        font-size: 2rem !important; }
   .header-img {
     height: 178px;
     background-size: 150%;
