add headings for set

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,3 +1,7 @@
+.menu-header-text,
+.contact-header-text {
+  color: transparent;
+}
 
 .header-img {
   background-image: url(images/pecansalad_banner.jpg);
